--- a/test.html
+++ b/test.html
@@ -18,12 +18,13 @@
     .compose-window {
       width: 500px;
       height: 400px;
-      border: 1px solid #ccc;
+      border: 2px solid #ccc;
       position: absolute;
       top: 100px;
       left: 100px;
       background: white;
       padding: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     .compose-window::before {
       content: 'Gmail Compose Window (Simulated)';
@@ -37,17 +38,18 @@
   <h1>Bubo Gmail Extension Test</h1>
   <p>This page simulates the Gmail interface for testing the Bubo extension functionality.</p>
   
-  <div>
-    <button id="create-compose">Create Compose Window</button>
-    <button id="remove-compose">Remove Compose Window</button>
+  <div style="margin-bottom: 20px; background: #f5f5f5; padding: 15px; border-radius: 5px;">
+    <h3>Step 1: Compose Window Controls</h3>
+    <button id="create-compose" style="background: #4CAF50; color: white; border: none; padding: 10px 15px; margin-right: 10px;">Create Compose Window</button>
+    <button id="remove-compose" style="background: #f44336; color: white; border: none; padding: 10px 15px;">Remove Compose Window</button>
   </div>
   
-  <div>
-    <h3>Test Screens:</h3>
-    <button id="test-dashboard">Dashboard</button>
-    <button id="test-email-editor">Email Editor</button>
-    <button id="test-followup-editor">Followup Editor</button>
-    <button id="test-campaign-detail">Campaign Detail</button>
+  <div style="margin-bottom: 20px; background: #f5f5f5; padding: 15px; border-radius: 5px;">
+    <h3>Step 2: Test Components</h3>
+    <button id="test-dashboard" style="background: #2196F3; color: white; border: none; padding: 10px 15px; margin-right: 10px;">Dashboard</button>
+    <button id="test-email-editor" style="background: #2196F3; color: white; border: none; padding: 10px 15px; margin-right: 10px;">Email Editor</button>
+    <button id="test-followup-editor" style="background: #2196F3; color: white; border: none; padding: 10px 15px; margin-right: 10px;">Followup Editor</button>
+    <button id="test-campaign-detail" style="background: #2196F3; color: white; border: none; padding: 10px 15px;">Campaign Detail</button>
   </div>
   
   <div id="compose-container">
